test/should-fail/检查返回值-11.j
function test takes nothing returns integer
    if true then
        if true then
            return 0
        elseif true then
            if true then
                return 0
            elseif true then
            else
                return 0
            endif
        else
            return 0
        endif
    else
        return 0
    endif
endfunction